Move back-to-top button to left to avoid chatbot overlap

--- a/style.css
+++ b/style.css
@@ -328,7 +328,9 @@ ul {
 .back-to-top {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    bottom: 30px;
+    left: 30px;
+    right: auto;
     width: 50px;
     height: 50px;
     background: transparent;
